--- a/src/app/components/admin/pokemon-list/pokemon-list.component.html
+++ b/src/app/components/admin/pokemon-list/pokemon-list.component.html
@@ -1,15 +1,18 @@
 <div class="container">
   <div class="row">
     <div class="col-2"
-         style="background-color: rgb(145, 255, 145);"
          *ngFor="let pokemon of pokemons | paginate: { itemsPerPage: contador, currentPage: pagina }">
-
       <div class="row">
         <div class="col-12">
           <img width="90%" height="90%" src='{{pokemon.imageUrl}}' alt='{{ pokemon.name }}'>
         </div>
         <div class="col-12">
-          <span>Tipo: </span>
+          <span>
+            Tipo: {{ pokemon.pokemonInfo.types[0]}}
+          </span>
+          <span *ngIf="pokemon.pokemonInfo.types[1]">
+            Tipo: {{ pokemon.pokemonInfo.types[1]}}
+          </span>
         </div>
         <div class="col-12">
           <a href="#" class="btn btn-primary">Mais Informações</a>
@@ -20,6 +23,11 @@
   </div>
 
   <div class="text-right">
-    <pagination-controls (pageChange)="pagina = $event"></pagination-controls>
+    <pagination-controls
+      previousLabel = "Anterior"
+      nextLabel = "Próximo"
+      (pageChange)="pagina = $event"
+      >
+    </pagination-controls>
   </div>
 </div>
