--- a/src/app/components/home/login/login.component.css
+++ b/src/app/components/home/login/login.component.css
@@ -1,63 +1,111 @@
-:host {
+* {
+  background-color: #282a36;
+  font-family: Arial, Helvetica, sans-serif;
+  overflow: hidden;
+}
+
+.area-login {
   display: flex;
+  height: 100vh;
   justify-content: center;
-  margin: 100px 0px;
+  align-items: center;
 }
 
-.mat-card {
-  border: 1px solid #ccc;
-}
-
-.mat-card-header {
+.login {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  background-color: #44475a;
+  width: 380px;
+  height: 380px;
+  padding: 35px;
+  border-radius: 10px;
 }
 
-.mat-card-title {
+.login form {
   display: flex;
-  justify-content: center;
-  margin-top: 10px !important;
-}
-
-.mat-card-subtitle {
-  display: flex;
-  justify-content: center;
-}
-
-.mat-form-field {
   width: 100%;
-  min-width: 360px;
+  flex-direction: column;
+  background-color: #44475a;
 }
 
-.mat-raised-button {
+.login input {
+  margin-top: 10px;
+  color: #CBD0F7;
+  border: none;
+  height: 45px;
+  outline: none;
+  border-radius: 8px;
+  padding-left: 10px;
+}
+
+.login .image {
+  background-color: #44475a;
+}
+
+.login img {
+  width: 85px;
+  height: auto;
+  padding: 15px;
+  background-color: #44475a;
+}
+
+.login p {
+  background-color: #44475a;
+  color: #CBD0F7;
+  font-size: 14px;
+  margin-top: 20px;
+}
+
+.login p a{
+  background-color: #44475a;
+  color: #7e92cc;
+  text-decoration: none;
+  margin-left: 10px;
+  font-size: 14px;
+}
+
+input::placeholder {
+  color: #CBD0F7;
+  font-size: 14px;
+}
+
+form [type="submit"] {
+  display: block;
+  background-color: #7e92cc;
+  font-size: 15px;
+  text-transform: uppercase;
+  font-weight: bold;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+.ng-star-inserted {
+  color: #dd3a3a;
+  background-color: #44475a;
+  margin-top: 5px;
+}
+
+/* :host {
   display: flex;
   justify-content: center;
-  width: 100%;
-  min-width: 360px;
+  min-height: 100vh;
 }
 
 .password-link {
-  display: flex;
-  justify-content: right;
-  margin-top: -10px;
-  margin-bottom: 20px;
-}
-
-.register-link {
-  display: flex;
   justify-content: center;
-  margin-top: 10px;
-}
-
-.message {
   display: flex;
-  justify-content: center;
-  margin-top: 10px;
-  color: red;
-  font-weight: bold;
 }
 
-p {
-  margin-top: 4px;
-  margin-bottom: 4px;
+.logo{
+  display: flex;
+  align-items: center;
+  flex-flow: column;
 }
+.logo img{
+  width: 45%;
+}
+
+.formulario-campo{
+  margin: 11px;
+} */
