--- a/src/app/components/admin/pokemon-list/pokemon-list.component.html
+++ b/src/app/components/admin/pokemon-list/pokemon-list.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-2 pokemon-card" *ngFor="let pokemon of pokemons | paginate: { itemsPerPage: contador, currentPage: pagina }">
-      <div class="row">
+      <div class="row teste">
         <div class="col-12">
           <img [src]='pokemon.imageUrl' alt='{{ pokemon.name }}'>
         </div>
