--- a/src/app/components/home/login/login.component.html
+++ b/src/app/components/home/login/login.component.html
@@ -23,66 +23,17 @@
         </div>
       </mat-error>
 
-      <input type="submit" value="Entrar">
-    </form>
-    <p>Ainda não tem uma conta?<a href="#">Criar Conta</a></p>
-  </div>
-</section>
-
-
-<!-- <ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="medium" color="#fff" type="pacman" [fullScreen]="true">
-  <p style="color: white; font-family: arial;">Iniciando sessão...</p>
-</ngx-spinner>
-
-<div class="d-flex justify-content-center align-items-center">
-  <div class="card p-3">
-
-    <div class="row">
-      <div class="col-12 pb-3 logo">
-        <img src="https://cdn-icons-png.flaticon.com/128/287/287221.png" />
-          <mat-card-title>
-            Acesso a Pokédex
-          </mat-card-title>
-          <mat-card-subtitle>
-            Informe suas credenciais de acesso
-          </mat-card-subtitle>
-      </div>
-    </div>
-
-    <form [formGroup]="formLogin" (ngSubmit)="onSubmit()">
-
-      <div class="form-group">
-        <p class="formulario-campo">
-          <input class="form-control" matInput type="text" placeholder="User:" formControlName="userName" />
-        </p>
-        <mat-error *ngIf="form.userName.touched && form.userName.invalid">
-          <div *ngIf="form.userName.errors.required">
-            Por favor, informe seu userName.
-          </div>
-        </mat-error>
-      </div>
-      <div class="form-group">
-        <p class="formulario-campo">
-          <input class="form-control" matInput type="password" placeholder="Senha de acesso:"
-            formControlName="password" />
-        </p>
-        <mat-error *ngIf="form.password.touched && form.password.invalid">
-          <div *ngIf="form.password.errors.required">
-            Por favor, informe sua senha.
-          </div>
-        </mat-error>
+      <div class="message">
+        {{mensagem}}
       </div>
 
       <p class="password-link">
         <a href="#">Esqueci minha senha.</a>
       </p>
 
-      <p class="d-flex justify-content-center">
-        <button type="submit" mat-raised-button color="primary" [disabled]="!formLogin.valid">
-          Acessar
-        </button>
-      </p>
-
+      <input type="submit" value="Entrar" [disabled]="!formLogin.valid">
     </form>
+    <p>Ainda não tem uma conta?<a href="#">Criar Conta</a></p>
+
   </div>
-</div> -->
+</section>
